# ftest

./: Cargo.toml  README.md
examples/: not_working_box.rs  not_working_future.rs  not_working_mutable.rs  working_box.rs  working_function.rs  working_future.rs  working_nonmutable.rs
src/: main.rs
