[package]
name = "ftest"
version = "0.1.0"
authors = ["Jeremy Andrews <jeremy@tag1consulting.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
macro_rules_attribute = "*"
